# basisConversion

./: .gitignore  README.md
conv_cpp/: CMakeLists.txt  basis_convertor.cpp  basis_convertor.h  binary_convertor.cpp  binary_convertor.h  binary_utils.cpp  binary_utils.h  decimal_convertor.cpp  decimal_convertor.h  decimal_utils.cpp  decimal_utils.h  main.cpp
conv_cpp/parts/: basis_conversion.cpp  basis_conversion.h  basis_convertor.cpp  basis_convertor.h  binary_utils.cpp  binary_utils.h  decimal_utils.cpp  decimal_utils.h  octal_utils.cpp  octal_utils.h
